@@ -1,3 +1,8 @@
+Tue Feb 16 05:50:27 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* io-ops.c (S_io_revoke): New function.  Don't attempt to
+	implement.  (Other systems don't even permit non-file revokes.) 
+
 1998-10-24  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* ethernet.c (ethernet_open): Check error return from device_open and
